# shield-hq

./: Cargo.toml  LICENSE
api/: Cargo.toml
api/src/: main.rs
data/: Cargo.toml
data/data/: core-set-draft.toml  core-set.toml  products.toml
data/src/: card.rs  graphql.rs  lib.rs  product.rs
data/src/card/: basic_power.rs  card_product.rs  card_set.rs  card_side.rs  cost.rs  hit_points.rs  keyword.rs  trait.rs
data/src/graphql/: scalar.rs
