[package]
name = "shield-hq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0", features = ["macros"] }
axum-macros = "0.3.0"
data = { path = "../data" }
juniper = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.5"
