[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.12.0"
juniper = "0.15"
lazy_static = "1.4.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"
